...
            android:layout_height="100dp"
            android:src="@drawable/captain"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_below="@id/captainOtter"
            fontPath="fonts/Primitive.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
...
